# AdapticBot

./: .gitignore  Dockerfile  README.md  adaptic.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: workflow-tg.yml
alembic/: env.py
alembic/versions/: 083d5cc61a04_upgrade_user_table.py  19250159cafe_upd_memo_model.py  1def1ad40bd2_init.py  26b316bb0c6d_add_meet_table.py  2b6c40afc75e_init_project.py  3a5ccfb479e1_upd_user_model.py  4829696e7ecc_add_tables.py  64d507178be5_add_models.py  9a3986c5e60e_first_migrate.py  bf97f520b76a_initializa_project.py  d59324b62748_initial_migrate.py
src/: __init__.py  bot.py
src/core/buttons/inline/: __init__.py  inline_fabric.py
src/core/buttons/reply/: __init__.py  reply_fabric.py
src/core/configurations/: __init__.py  bot_configs.py  bot_general_config.py
src/core/exceptions/btn_excp/: inline_btn_exception.py  reply_btn_exceotion.py  reply_btn_exception.py
src/core/filters/: admin_filter.py  user.py
src/core/middleware/: __init__.py  spam_middleware.py
src/core/routers/: __init__.py  command_router.py  message_router.py
src/core/service/admin/: admin_main_service.py
src/core/service/utils/: pagination.py  (+1 more)
src/database/: __init__.py
src/database/redis/: redis_worker.py
src/database/sqlite/: db_worker.py
src/enums/: __init__.py
src/enums/texts/: __init__.py  admin_panel.py  commands.py  configuration.py  errors.py
src/logger/: __init__.py  tg_logger.py
src/notifications/: notifications_service.py
src/settings/: __init__.py  database_settings.py  tg_bot_settings.py
(+13 files in other folders)
