[tool.poetry]
name = "adapticbot"
version = "0.1.0"
description = "This bot company for help study new employes"
authors = ["darkfos82 <darkfos82@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.16.0"
python-dotenv = "^1.0.1"
pydantic = "^2.10.4"
flake8 = "^7.1.1"
pydantic-settings = "^2.7.0"
black = "^24.10.0"
redis = "^5.2.1"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
